// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/paymentmodule/PaymentPlanDetails/FspSection should render FSP 1`] = `
<div>
  <div
    class="MuiBox-root css-zwiamn"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 sc-blHHSb kPa-dfK css-1ps6pg7-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-tdpf08"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1j53xw6-MuiTypography-root"
        >
          FSPs
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-acctgf-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-1equabv-MuiGrid-root"
        >
          <div>
            <span
              class="sc-fAUdSK goVbUg"
              color="textSecondary"
            >
              Cash
            </span>
            <div
              data-cy="label-Cash"
            >
              <span
                class="sc-dntaoT dIDHTF"
                color="textSecondary"
              >
                Test FSP 1
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-gtLWhw VFxTS"
      >
        <div
          class="sc-egkSDF cYYMIc"
        />
      </div>
      <div
        class="MuiBox-root css-j7qwjs"
      >
        <div
          class="sc-ghWlax bzkNxN"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1j53xw6-MuiTypography-root"
          >
            Volume by Delivery Mechanism
          </h6>
           
        </div>
        <div
          class="sc-kLhKbu iAQbEA"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-1bzpx2o-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1osj8n2-MuiGrid-root"
            >
              <div
                class="sc-ivxoEo dPHKrZ"
                color="#D8E1EE"
              >
                <div>
                  <span
                    class="sc-fAUdSK goVbUg"
                    color="textSecondary"
                  >
                    Cash (Test FSP 1)
                  </span>
                  <div
                    data-cy="label-Cash (Test FSP 1)"
                  >
                    <span
                      class="sc-dntaoT dIDHTF"
                      color="textSecondary"
                    >
                      424 USD (424 USD)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1e2bu2o-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
            >
              <div
                class="sc-ixGGxD cHDLrf"
              >
                <canvas
                  height="0"
                  role="img"
                  style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
                  width="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/paymentmodule/PaymentPlanDetails/FspSection should render not setup FSP 1`] = `
<div>
  <div
    class="MuiBox-root css-zwiamn"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 sc-blHHSb kPa-dfK css-1ps6pg7-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-tdpf08"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1j53xw6-MuiTypography-root"
        >
          FSPs
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-acctgf-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-1equabv-MuiGrid-root"
        >
          <div>
            <span
              class="sc-fAUdSK goVbUg"
              color="textSecondary"
            >
              -
            </span>
            <div
              data-cy="label--"
            >
              <span
                class="sc-dntaoT dIDHTF"
                color="textSecondary"
              >
                Test FSP 1
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-gtLWhw VFxTS"
      >
        <div
          class="sc-egkSDF cYYMIc"
        />
      </div>
      <div
        class="MuiBox-root css-j7qwjs"
      >
        <div
          class="sc-ghWlax bzkNxN"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1j53xw6-MuiTypography-root"
          >
            Volume by Delivery Mechanism
          </h6>
           
        </div>
        <div
          class="sc-kLhKbu iAQbEA"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-1bzpx2o-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1osj8n2-MuiGrid-root"
            >
              <div
                class="sc-ivxoEo dPHKrZ"
                color="#D8E1EE"
              >
                <div>
                  <span
                    class="sc-fAUdSK goVbUg"
                    color="textSecondary"
                  >
                    Cash (Test FSP 1)
                  </span>
                  <div
                    data-cy="label-Cash (Test FSP 1)"
                  >
                    <span
                      class="sc-dntaoT dIDHTF"
                      color="textSecondary"
                    >
                      424 USD (424 USD)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container css-1e2bu2o-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
            >
              <div
                class="sc-ixGGxD cHDLrf"
              >
                <canvas
                  height="0"
                  role="img"
                  style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
                  width="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
